Fixed alignment errors (#679)

--- a/src/components/common/cpc-debrief-card/cpc-debrief-card.scss
+++ b/src/components/common/cpc-debrief-card/cpc-debrief-card.scss
@@ -20,6 +20,7 @@
   .cpc-percentage {
     margin-left: 1em;
     color: black;
+    padding-top: 10px;
   }
 
   .cpc-answer-icon {
